added design for add category

--- a/src/app/Component/navbar-component/navbar-component.component.html
+++ b/src/app/Component/navbar-component/navbar-component.component.html
@@ -30,7 +30,7 @@
             <a class="nav-link active" aria-current="page" routerLink="GetAPI">Get API</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="POSTAPI">POST API</a>
+            <a class="nav-link active" aria-current="page" routerLink="POSTAPI">Category</a>
           </li>
 
         </ul>
