Added core category functionality

--- a/src/app/Component/navbar-component/navbar-component.component.html
+++ b/src/app/Component/navbar-component/navbar-component.component.html
@@ -30,9 +30,11 @@
             <a class="nav-link active" aria-current="page" routerLink="GetAPI">Get API</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="POSTAPI">Category</a>
+            <a class="nav-link active" aria-current="page" routerLink="POSTAPI">CoreCategory</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="SERVICEPOSTAPI">UsingServiceCategory</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
