initial commit for using service in angular

--- a/src/app/using-service-category/using-service-category.component.html
+++ b/src/app/using-service-category/using-service-category.component.html
@@ -1,1 +1,43 @@
-<p>using-service-category works!</p>
+<div class="container-fluid">
+    <div class="row">
+      <div class="col-12 p-3 bg-success text-white rounded">Category Details:</div>
+      <div class="col-8 bg-light text-dark rounded border">
+        <table class="table">
+          <thead class="table-success">
+            <tr>
+              <th scope="col">Category Id</th>
+              <th scope="col">Category Name</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of  CategoryTest">
+              <td>{{item.categoryId}}</td>
+              <td>{{item.categoryName}}</td>
+              <!-- <td>
+                <button type="button" class="btn btn-success me-1" (click)="FetchCategory(item)">Edit</button>
+                <button type="button" class="btn btn-danger" (click)="DeleteCategory(item.categoryId)">Delete</button>
+              </td> -->
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <!-- <div class="col-4 bg-light text-dark rounded border">
+          <div class="mb-3">
+            <label class="form-label">Category Name:</label>
+            <input type="text" class="form-control"  [(ngModel)]=""
+              placeholder="Enter Category Name">
+          </div>
+          <div class="mb-3">
+           
+            @if( this.studObj.CategoryId == 0){
+              <button type="button" class="btn btn-primary" (click)="postCategoryData()">Add</button>
+            }@else{
+              <button type="button" class="btn btn-primary" (click)="UpdateCategoryData()">Update</button>
+            }
+            <button type="button" class="btn btn-danger" (click)="ResetCategoryData()">Reset</button>
+          </div>
+      </div> -->
+  
+    </div>
+  </div>
