added input functionality

--- a/src/app/using-service-category/using-service-category.component.html
+++ b/src/app/using-service-category/using-service-category.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-12 p-3 bg-success text-white rounded">Category Details:</div>
-      <app-alert></app-alert>
+      <app-alert [message]="'Hello test'"></app-alert>
       <div class="col-8 bg-light text-dark rounded border">
         <table class="table">
           <thead class="table-success">
