--- a/src/app/Component/navbar-component/navbar-component.component.html
+++ b/src/app/Component/navbar-component/navbar-component.component.html
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="SERVICEPOSTAPI">UsingServiceCategory</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="LifeCycle">Life Cycle</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
