--- a/src/app/Component/navbar-component/navbar-component.component.html
+++ b/src/app/Component/navbar-component/navbar-component.component.html
@@ -44,6 +44,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="NgContainer">NgContainer</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="login">Login</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
