--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -32,7 +32,7 @@
         </label>
         <a href="#">forgot password?</a>
       </div>
-      <button type="submit">Login</button>
+      <button type="button" (click)="onClick()">Login</button>
       <div class="link">
         <p>
           Don't have an account?
