--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -16,14 +16,14 @@
         <span class="icon">
           <i class="fa-solid fa-envelope"></i>
         </span>
-        <input type="emal" name="email" required>
+        <input type="emal" [(ngModel)]="loginObj.email" name="email" required>
         <label for="">Email</label>
       </div>
       <div class="input-box">
         <span class="icon">
           <i class="fa-solid fa-lock"></i>
         </span>
-        <input type="password" name="email" required>
+        <input type="password" [(ngModel)]="loginObj.password" name="password" required>
         <label for="">password</label>
       </div>
       <div class="remember-forgot">
