--- a/src/app/Component/layout/layout.component.html
+++ b/src/app/Component/layout/layout.component.html
@@ -45,7 +45,12 @@
             <a class="nav-link active" aria-current="page" routerLink="NgContainer">NgContainer</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="login">Login</a>
+            @if(localValue == null){
+              <a class="nav-link active" aria-current="page" routerLink="login">Login</a>
+            }@else{
+              <a class="nav-link active" aria-current="page" routerLink="login">LoginOut</a>
+            }
+            
           </li>
         </ul>
         <form class="d-flex">
